# Todo-Fullstack

./: README.md
back/: .gitignore  alembic.ini  config.py  database.py  main.py  models.py  package-lock.json  pyproject.toml  requirements.txt  tasksEncoder.py  todos.json  users.db  users.py
back/migrations/versions/: 1e4f8bed4a98_add_photo_path_to_todos.py  47512e5b0912_add_all_tables.py  4d9535d5791c_create_photos_table_and_migrate_data.py  783280ca80f8_change_realtionships.py  8132e7dbbbc6_add_company_table.py  939285feb0cb_migrate_to_postgresql.py  b3617d076bdf_add_assignee_ids_array_to_todos_model.py  cd9526741d3d_update_todos_model_to_use_single_.py  e132c38f97ff_create_user_and_task_models.py
back/public/: index.html
back/public/assets/: index-CjL-pZCc.js  index-Cuh0Wfps.js  index-iEl1gq1y.css
back/routers/: admin.py  auth.py  company.py  todos.py  user.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.js
frontend/components/ui/: command.jsx  input-otp.jsx
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.js  main.jsx
frontend/src/components/: AuthService.js  AuthService.jsx  EditTodoForm.js  Modal.css  Modal.js  Modal.jsx  TaskPopup.css  TaskPopup.js  Todo.js  TodoForm.js  TodoWrapper.js  UserContext.js  UserContext.jsx
frontend/src/components/Login/: Login.css  Login.js  Login.jsx
frontend/src/components/Register/: Company.jsx  CompanyRegister.jsx  Register.css  Register.js  Register.jsx
test/: jsconfig.json  package-lock.json  package.json  vite.config.js
test/src/: App.jsx
(+25 files in other folders)
