[tool.poetry]
name = "todo "
version = "0.1.0"
description = ""
authors = ["AsuSociety <omerasus3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.02"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
tortoise-orm = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
